Improve Sceyt logger. Add default formatters and providers. Add MessageDeliveryStatusIcons.kt Add ChannelItemStyle.kt